2004-06-25  Elliott Hughes  <enh@acm.org>

	* src/decl.cpp: a fix to my fix for bug #3986; still regresses 
	on the same Jacks tests, but is better practically. Now, as
	well as rejecting invalid 1.4 source, we can compile against
	the 1.5 rt.jar classes.

2004-06-22  Elliott Hughes  <enh@acm.org>

	* src/decl.cpp: bug #3424; distinguish between invalid types
	and placeholders for not-found types (i.e. keep saying "type not
	found" rather than switching to "a candidate was found, but it is
	invalid and needs to be fixed before this type will successfully
	compile."

2004-06-21  Elliott Hughes  <enh@acm.org>

	* src/decl.cpp: bug #3986; don't compile covariant return types
	in .java files when -source is less than 1.5. This breaks
	the Jacks tests 13.1-covariance-[123], but I think they're wrong
	and should only be run with "-source 1.5".

2004-06-20  Elliott Hughes  <enh@acm.org>

	* src/system.cpp: bug #3934 and bug #3989; don't try to create
	a placeholder for unfound system methods and fields. It's
	likely to be too late. (I wonder if we should use tests such
	as "control.Throwable_initCauseMethod() != NULL" instead of
	the usual "control.option.target < JikesOption::SDK1_4", the
	better to cope with unusual targets such as MIDP-1.0, and cases
	where the user has forgotten "-target 1.3"? The current patch
	stops us crashing; the alternative patch would let us "just work".)

2004-06-02  Elliott Hughes  <enh@acm.org>

	* src/double.cpp, src/double.h: it's impossible to implement
	"T& operatorO(const T&)" correctly where O isn't an assignment
	operator. (In our case, we were leaking memory.)
	Implement "T operator(const T&)" instead.

2004-06-02  Elliott Hughes  <enh@acm.org>

	* src/definite.cpp: remove redundant test from
	DefinitePair::operator=(const DefiniteAssignmentSet&).
	* src/double.cpp: fix leak in BigInt::operator=(const BigInt&).
	* src/double.h: fix BitInt(BigInt&).

2004-05-31  Elliott Hughes  <enh@acm.org>
